# wingpanel-indicator-calendar

./: .gitignore  .nvimrc  README.md  meson.build  shell.nix
data/: com.github.linarcx.wingpanel.indicator-calendar.gschema.xml  gschema.xml  meson.build
data/assets/events/: PersianNational.json  World.json
meson/: post_install.py
src/: Main.vala
src/LibCalendar/: JsonParser.vala  SolarHijri.vala
src/Services/: TimeManager.vala
src/Widgets/: PanelLabel.vala
vapi/: granite.deps  granite.vapi
